# Phoenix6-Documentation

./: .gitignore  Makefile  README.md  make.bat  pyproject.toml  readthedocs.yml
.github/workflows/: CI.yml
source/: 404.rst  conf.py  index.rst  requirements.txt  robots.txt
source/_extensions/: rtd_html_zip.py
source/_extensions/controls_js_sim/: __init__.py  flywheel-bangbang.js  flywheel-pidf.js  profiled-pidf.js  turret-pidf.js  vertical-arm-pidf.js
source/_extensions/controls_js_sim/_static/: pid-tune.css
source/_extensions/controls_js_sim/base/: base-sim.js  base-visualization.js  z_base-profiled-sim.js
source/_extensions/controls_js_sim/fastchart/: 0-sample.js  1-signal.js  2-plottedSignal.js  2-valueAxis.js  3-fastChart.js  4-plot.js
source/_extensions/controls_js_sim/plant/: flywheel-plant.js  turret-plant.js  vertical-arm-plant.js
source/_extensions/controls_js_sim/profiles/: profile_1.js
source/_extensions/controls_js_sim/sim/: flywheel-sim.js  profiled-sim.js  turret-sim.js  vertical-arm-sim.js
source/_extensions/controls_js_sim/utils/: delay-line.js
source/_extensions/controls_js_sim/visualization/: flywheel-visualization.js  turret-visualization.js  vertical-arm-visualization.js
source/_static/css/: theme_ctre.css
source/docs/: support.rst  why-phoenix.rst  why-pro.rst
source/docs/api-reference/: index.rst
source/docs/api-reference/api-usage/: actuator-limits.rst  api-overview.rst  chrp-playback.rst  configuration.rst  control-requests.rst  enabling-actuators.rst  faults.rst  hoot-replay.rst  index.rst  migration-guide.rst  orchestra.rst  signal-logging.rst  status-signals.rst
source/docs/api-reference/device-specific/: index.rst
source/docs/api-reference/examples/: index.rst  quickstart.rst
source/docs/api-reference/mechanisms/: index.rst
source/docs/api-reference/simulation/: index.rst  simulation-intro.rst
source/docs/application-notes/: canbus-latency-and-frequency.rst  devblog.rst  manual-pid-tuning.rst  troubleshooting-your-canbus.rst  tuner-evolution.rst  tuning-canrange.rst  update-frequency-impact.rst
source/docs/canivore/: canivore-api.rst  canivore-config.rst  canivore-hardware-attached.rst  canivore-intro.rst  canivore-setup.rst
source/docs/hardware-reference/: actuator-limits.rst  index.rst
source/docs/installation/: configuring-your-device.rst  hardware-requirements.rst  index.rst  installation-frc.rst  installation-nonfrc.rst  installation.rst  non-frc-checklist.rst  pro-installation.rst  requirements.rst  running-diagnostics.rst
source/docs/licensing/: licensing.rst  team-licensing.rst  what-is-licensing.rst
source/docs/migration/: canbus-utilization.rst  new-to-phoenix.rst
source/docs/troubleshooting/: canbus-troubleshooting.rst  index.rst  running-diagnostics.rst
source/docs/tuner/: configs.rst  connecting.rst  controlling-devices.rst  device-details-page.rst  device-history.rst  device-list.rst  index.rst  pigeon-cal.rst  plotting.rst  profile.rst  self-test.rst  signal-and-control.rst  tools.rst  tuner-history.rst
source/docs/yearly-changes/: yearly-changelog.rst
(+82 files in other folders)
