[tool.poetry]
name = "phoenix-documentation"
version = "9999"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
doc8 = "==1.1.1"
docutils = "==0.20.1"
fonttools = {version = "==4.42.1", extras = ["woff"]}
furo = "==2023.09.10"
latex = "==0.7.0"
packaging = "==23.1"
setuptools = "==69.5.1"
sphinx = "==7.2.5"
sphinx-copybutton = "==0.5.2"
sphinx-hoverxref = "==1.3.0"
sphinx-notfound-page = "==1.0.0"
sphinx_design = "==0.5.0"
sphinxcontrib-ghcontributors = "==0.2.3"
sphinxcontrib-htmlhelp = "==2.0.4"
sphinxcontrib-images = "==0.9.4"
sphinxcontrib-serializinghtml = "==1.1.9"
sphinxcontrib-svg2pdfconverter = "==1.2.2"
sphinxext-delta = "==0.2.0"
sphinxext-mimic = "==0.1.1"
sphinxext-opengraph = "==0.8.2"
sphinxext-rediraffe = "==0.2.7"
sphinxext-remoteliteralinclude = "==0.4.0"
urllib3 = "==2.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"