[tool.poetry]
name = "phoenix-documentation"
version = "9999"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
doc8 = "==1.1.2"
docutils = "==0.20.1"
furo = "==2024.8.6"
latex = "==0.7.0"
packaging = "==24.1"
sphinx = "==8.2.3"
sphinx-copybutton = "==0.5.2"
sphinx-hoverxref = "==1.4.0"
sphinx-notfound-page = "==1.0.2"
sphinx_design = "==0.6.1"
sphinxcontrib-htmlhelp = "==2.0.6"
# sphinxcontrib-images = "==0.9.4" # not supported in sphinx 8
sphinxcontrib-serializinghtml = "==1.1.9"
sphinxcontrib-svg2pdfconverter = "==1.2.2"
sphinxext-delta = "==0.2.0"
sphinxext-mimic = "==0.1.1"
sphinxext-opengraph = "==0.10.0"
sphinxext-rediraffe = "==0.2.7"
sphinxext-remoteliteralinclude = "==0.4.0"

# Dependencies that often need to get updated
urllib3 = "==2.5.0"
jinja2 = "==3.1.6"
requests = "==2.32.4"

sphinx-build-compatibility = {git = "https://github.com/readthedocs/sphinx-build-compatibility.git", rev = "main"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
